ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any 22 0.0.0.0/0 any 192.168.100.241 in
-A ufw-user-input -p tcp --dport 22 -s 192.168.100.241 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -s 192.168.100.241 -j ACCEPT

### tuple ### allow any 22 0.0.0.0/0 any 192.168.100.242 in
-A ufw-user-input -p tcp --dport 22 -s 192.168.100.242 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -s 192.168.100.242 -j ACCEPT

### tuple ### allow any 22 0.0.0.0/0 any 192.168.100.243 in
-A ufw-user-input -p tcp --dport 22 -s 192.168.100.243 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -s 192.168.100.243 -j ACCEPT

### tuple ### allow any 22 0.0.0.0/0 any 192.168.100.244 in
-A ufw-user-input -p tcp --dport 22 -s 192.168.100.244 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -s 192.168.100.244 -j ACCEPT

### tuple ### allow any 22 0.0.0.0/0 any 192.168.200.4 in
-A ufw-user-input -p tcp --dport 22 -s 192.168.200.4 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -s 192.168.200.4 -j ACCEPT

### tuple ### allow any 22 0.0.0.0/0 any 192.168.200.208 in
-A ufw-user-input -p tcp --dport 22 -s 192.168.200.208 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -s 192.168.200.208 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 192.168.100.241 in
-A ufw-user-input -p tcp --dport 443 -s 192.168.100.241 -j ACCEPT
-A ufw-user-input -p udp --dport 443 -s 192.168.100.241 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 192.168.100.242 in
-A ufw-user-input -p tcp --dport 443 -s 192.168.100.242 -j ACCEPT
-A ufw-user-input -p udp --dport 443 -s 192.168.100.242 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 192.168.100.243 in
-A ufw-user-input -p tcp --dport 443 -s 192.168.100.243 -j ACCEPT
-A ufw-user-input -p udp --dport 443 -s 192.168.100.243 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 192.168.100.244 in
-A ufw-user-input -p tcp --dport 443 -s 192.168.100.244 -j ACCEPT
-A ufw-user-input -p udp --dport 443 -s 192.168.100.244 -j ACCEPT

### tuple ### allow tcp 80,443 0.0.0.0/0 any 0.0.0.0/0 Apache%20Full - in
-A ufw-user-input -p tcp -m multiport --dports 80,443 -j ACCEPT -m comment --comment 'dapp_Apache%20Full'

### tuple ### deny any any 0.0.0.0/0 any 192.168.200.214 in
-A ufw-user-input -s 192.168.200.214 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 192.168.200.0/24 in
-A ufw-user-input -s 192.168.200.0/24 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 192.168.100.0/24 in
-A ufw-user-input -s 192.168.100.0/24 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 192.168.200.55 in
-A ufw-user-input -s 192.168.200.55 -j DROP

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
